[gd_scene load_steps=13 format=3 uid="uid://ctdv4apgops"]

[ext_resource type="Texture2D" uid="uid://bt0f5ue14icj1" path="res://arts/characterSprite.png" id="1_qeky2"]
[ext_resource type="Script" path="res://Jogador/jogador.gd" id="1_sqf12"]
[ext_resource type="PackedScene" uid="uid://y8stf5kqtp5c" path="res://Utilidade/hurt_box.tscn" id="3_30451"]
[ext_resource type="Texture2D" uid="uid://cdvxc4eylrdd" path="res://arts/exp_background - Copia.png" id="4_kdlwp"]
[ext_resource type="Texture2D" uid="uid://b4ve6ephtpb7b" path="res://arts/exp_progress - Copia.png" id="5_armqj"]
[ext_resource type="Texture2D" uid="uid://cwebj83ndibnb" path="res://arts/healthbar - Copia.png" id="6_x7xd8"]
[ext_resource type="Texture2D" uid="uid://dx2vbyo26uyip" path="res://arts/health - Copia.png" id="7_t25b2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_378vh"]
radius = 64.0
height = 138.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ewbeq"]
radius = 68.2367

[sub_resource type="CircleShape2D" id="CircleShape2D_37hqo"]
radius = 1849.2

[sub_resource type="CircleShape2D" id="CircleShape2D_hqi1a"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xns4j"]
radius = 50.0

[node name="jogador" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_sqf12")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qeky2")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.2, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-38.5, -3)
shape = SubResource("CapsuleShape2D_378vh")

[node name="HurtBox" parent="." instance=ExtResource("3_30451")]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-38.5, -2)
shape = SubResource("CircleShape2D_ewbeq")

[node name="Attack" type="Node2D" parent="."]

[node name="FireBallTimer" type="Timer" parent="Attack"]
wait_time = 1.5

[node name="FireBallAttackTimer" type="Timer" parent="Attack/FireBallTimer"]
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
visible = false
shape = SubResource("CircleShape2D_37hqo")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(-45, 0)
shape = SubResource("CircleShape2D_hqi1a")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
position = Vector2(-45, 0)
shape = SubResource("CircleShape2D_xns4j")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("4_kdlwp")
texture_progress = ExtResource("5_armqj")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 23.0
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
value = 50.0
texture_over = ExtResource("6_x7xd8")
texture_progress = ExtResource("7_t25b2")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/FireBallTimer" to="." method="_on_fire_ball_timer_timeout"]
[connection signal="timeout" from="Attack/FireBallTimer/FireBallAttackTimer" to="." method="_on_fire_ball_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]

[editable path="HurtBox"]
